Ortiz's Version/Understanding of the game